Change project name and add JVM options to output GC logs