@@ -19,7 +19,13 @@ plugins {
 version = "1.0-dev"
 group = "t.cog.balok"
 description = "A tiny balok backend to tackle dumped memory accesses"
-applicationDefaultJvmArgs = ["-Xms4g", "-Xmx8g", "-Xss1m"]
+applicationDefaultJvmArgs = ["-Xms8g", "-Xmx8g", "-Xss1m", 
+// debug options
+//"-XX:+PrintGCDetails", 
+//"-XX:+PrintGCApplicationStoppedTime", 
+//"-XX:+PrintGCApplicationConcurrentTime", 
+//"-XX:+PrintGCDateStamps",
+]
 
 repositories {
     // Use jcenter for resolving your dependencies.
